2008-09-10 Ingo Renner  <ingo@typo3.org>

	* added a method to the user gateway to find connected users by their role
	* added a new column to the ACL roles table to mark roles as a friend role - that is a role that acts as a "friend list", that users can assign/categorize their friends to
	* added caching to the abstract community application controller for requesting and requested user

2008-09-09 Ingo Renner  <ingo@typo3.org>

	* fixed bug: friend connections were made in the wrong direction
	* added a hidden column to the friendship connection table to hide non approved friend relations
	* added a "remove as friend" profile action

2008-09-08 Ingo Renner  <ingo@typo3.org>

	* removed dependency on a non-public extension
	* removed the group gateway from the abstract community application controller as it is not needed for every community application
	* removed the init() method from the group model and joined it with the constructor
	* added fallback to default to the LLL view helper if there's no label for the current language
	* changed local lang labels to use underscores instead of dots as separator to make it possible to overwrite labels using TS
	* added a label to the profile actions for the case when a user views his own profile

2008-09-08 Frank Naegler  <typo3@naegler.net>

	* added tx_community_controller_ListGroupsApplication

2008-09-06 Frank Naegler  <typo3@naegler.net>

	* added sending SystemMessages on group events
	* added confirmation handling to tx_community_controller_EditGroupApplication

2008-09-05 Frank Naegler  <typo3@naegler.net>

	* added tx_community_controller_NewGroupApplication
	* improve and add new ajax functions to EditGroup Application
	* added ajax image upload to EditGroup Application

2008-09-04 Frank Naegler  <typo3@naegler.net>

	* added tx_community_controller_EditGroupApplication
	* added tx_community_controller_groupprofile_ProfileActionsWidget
	* added tx_community_view_groupprofile_ProfileActions